@@ -16,7 +16,7 @@ export(glmboost,
        ExpectReg, NBinomial, PropOdds, Weibull, Loglog, Lognormal, AUC, mboost_fit,
        Huber, AdaExp, CoxPH, FP, IPCweights, cvrisk, cv, bbs, stabsel,
        bols, bspatial, brandom, btree, bss, bns, brad, bmono, bmrf, buser, survFit, selected,
-       nuisance, "%+%", "%X%", extract)
+       nuisance, "%+%", "%X%", "%O%", extract)
        ###, basesel, fitsel)
 exportClasses("boost_family")
 exportMethods("show")
