@@ -289,3 +289,84 @@ stopifnot(all(D2 %*% beta > - 2e-05))
 #contour(sort(x1), sort(x2),
 #        z = matrix(predict(mod22, newdata = nd), ncol = length(x1)),
 #        col = "green", add = TRUE)
+
+### %O%: kronecker product of baselearners for matrix-valued
+### responses
+x1 <- 1:10/10
+x2 <- 11:17/17
+
+X1 <- cbind(1, x1, x1^2)
+colnames(X1) <- paste("X1", 1:ncol(X1), sep = "_")
+X2 <- cbind(1, x2, x2^2, x2^3)
+colnames(X2) <- paste("X2", 1:ncol(X2), sep = "_")
+
+x <- expand.grid(x1, x2)
+colnames(x) <- c("x1", "x2")
+B1 <- with(x, cbind(1, x1, x1^2))
+colnames(B1) <- paste("B1", 1:ncol(B1), sep = "_")
+B2 <- with(x, cbind(1, x2, x2^2, x2^3))
+colnames(B2) <- paste("B2", 1:ncol(B2), sep = "_")
+
+X <- kronecker(X2, X1)
+w <- rep(1, nrow(X))
+
+B <- kronecker(matrix(1, ncol = ncol(B2)), B1) * 
+     kronecker(B2, matrix(1, ncol = ncol(B1)))
+
+tol <- 1 / 10000
+stopifnot(max(abs(X - B)) < tol)
+
+K1 <- diag(ncol(B1))
+K2 <- crossprod(diff(diag(ncol(B2)), diff = 2))
+
+b1 <- buser(B2, K = diag(ncol(B2))) %X% 
+            buser(B1, K = diag(ncol(B1)))
+
+stopifnot(max(abs(extract(b1, "design") - B)) < tol)
+b1d <- b1$dpp(w)
+
+b2 <- buser(X1, K = diag(ncol(X1))) %O% 
+      buser(X2, K = diag(ncol(X2)))
+b2d <- b2$dpp(w)
+
+stopifnot(max(abs(get("XtX", environment(b1d$fit)) -
+        get("XtX", environment(b2d$fit)))) < tol)
+
+y <- runif(nrow(X))
+
+stopifnot(max(abs(b1d$fit(y)$model - as.vector(b2d$fit(y)$model))) < tol)
+
+m1 <- b1d$fit(y)
+p1 <- b1d$predict(list(m1, m1))
+
+m2 <- b2d$fit(y)
+p2 <- b2d$predict(list(m2, m2))
+
+stopifnot(max(abs(p1 - p2)) < tol)
+
+
+x1 <- runif(200)
+x2 <- runif(60)
+y <- rnorm(length(x1) * length(x2))
+d <- expand.grid(x1, x2)
+d$y <- y
+w <- as.vector(rmultinom(1, length(y), rep(1 / length(y), length(y))))
+
+m1 <- mboost(y ~ bbs(Var2, df = 3, knots = 5) %X% 
+                     bbs(Var1, df = 3, knots = 7),
+                     data = d, weights = w)
+m2 <- mboost(y ~ bbs(x1, df = 3, knots = 7)%O%
+                 bbs(x2, df = 3, knots = 5), 
+                 weights = w)
+
+stopifnot(max(abs(fitted(m1) - fitted(m2))) < tol)
+
+stopifnot(max(abs(coef(m1)[[1]] - coef(m2)[[1]])) < tol)
+
+stopifnot(max(abs(m1$predict() - m2$predict())) < tol)
+
+p1 <- predict(m1, newdata = expand.grid(Var1 = c(0.2, 0.5), Var2 = c(0.7, 0.3)))
+p2 <- predict(m2, newdata = data.frame(x1 = c(0.2, 0.5), x2 = c(0.7, 0.3)))
+
+stopifnot(max(abs(p1 - p2)) < tol)
+
