@@ -65,6 +65,9 @@
 
   o  various improvements and fixes in manuals
 
+  o  new experimental baselearner %O% for smoothing 
+     matrix-values responses
+
 
 		CHANGES in `mboost' VERSION 2.0-11 (2011-03-17, r561)
 
